--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -77,7 +77,7 @@
                     </div>
                     <div class="col-md-6 mb-3">
                         <label for="candidatePhone" class="form-label">Số điện thoại</label>
-                        <input type="tel" class="form-control" id="candidatePhone" required>
+                        <input type="tel" class="form-control" id="candidatePhone">
                     </div>
                 </div>
                 <div class="row">
@@ -87,7 +87,7 @@
                     </div>
                     <div class="col-md-6 mb-3">
                         <label for="candidateCitizenId" class="form-label">CCCD/CMND</label>
-                        <input type="text" class="form-control" id="candidateCitizenId" required>
+                        <input type="text" class="form-control" id="candidateCitizenId">
                     </div>
                 </div>
                 <div class="row">
