--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -447,7 +447,7 @@
                 <span class="nav-link">Nhân viên tiếp nhận: Đạo Minh Chiến</span>
             </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Đăng xuất</a>
+                    <a class="nav-link" href="/api/auth/sign-out">Đăng xuất</a>
                 </li>
             </ul>
         </div>
@@ -472,7 +472,7 @@
             <div class="collapse navbar-collapse" id="mainMenuNav">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Trang chủ</a>
+                        <a class="nav-link" href="/home">Trang chủ</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#">Danh sách phiếu đăng ký</a>
