--- a/src/main/resources/templates/invoice.html
+++ b/src/main/resources/templates/invoice.html
@@ -19,17 +19,17 @@
 </head>
 <body>
 
-<!-- Top blue contact bar -->
-<div class="topbar-blue">
-  <div class="left">
-    <span>📞 036 272 8710</span>
-    <span>📧 22120036@student.edu.vn</span>
-  </div>
-  <div class="right">
-    <span>🕒 Thứ 2 - Thứ 7: 7h30 - 20h30</span>
-  </div>
-</div>
-
+    <!-- Top blue contact bar -->
+    <div class="topbar-blue">
+      <div class="left">
+        <i class="fas fa-phone"></i> 036 272 8710
+        <span class="separator">|</span>
+        <i class="fas fa-envelope"></i> 22120036@student.edu.vn
+      </div>
+      <div class="right">
+        <i class="fas fa-clock"></i> <span id="clock">Đang tải...</span>
+      </div>
+    </div>
 <!-- Header -->
 <header class="topbar">
   <div class="logo-info">
@@ -48,10 +48,10 @@
 
 <!-- Navigation -->
 <nav class="navbar">
-  <a class="active" href="/invoice">Lập hóa đơn</a>
-  <a href="#">Xác nhận thanh toán</a>
-  <a href="#">Lập phiếu gia hạn</a>
-  <a href="/schedule">Tạo lịch thi</a>
+      <a href="/list-registration-forms">Danh sách phiếu đăng ký</a>
+      <a href="/schedule">Tạo lịch thi</a>
+      <a href="/invoice" class="active">Lập hóa đơn</a>
+      <a href="/results">Tra cứu kết quả thi</a>
 </nav>
 
 <!-- Form nhập kết quả -->
@@ -76,7 +76,7 @@
 
     <div class="row justify-content-center">
       <div class="col-md-6 form-group">
-        <label for="tong_tien">Tổng tiền:</label>
+      <label for="tong_tien">Tổng tiền:</label>
         <input type="number" class="form-control mb-2" id="tong_tien" style="background: #80bdff;" readonly>
       </div>
 
@@ -244,6 +244,8 @@
 <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-Fy6S3B9q64WdZWQUiU+q4/2Lc9npb8tCaSX9FK7E8HnRr0Jz8D6OP9dO5Vg3Q9ct" crossorigin="anonymous"></script>
 <script th:src="@{/js/script_invoice.js}"></script>
+    <script src="/js/headerAllPage.js"></script>
+
 
 </body>
 </html>
