Finish Rusults_Feature

--- a/src/main/resources/templates/DetailResultsExam.html
+++ b/src/main/resources/templates/DetailResultsExam.html
@@ -83,6 +83,11 @@
             <input type="text" id="score" readonly />
           </div>
 
+          <div class="form-group">
+            <label for="resultDetails">Chi tiết kết quả</label>
+            <input  type="text" id="resultDetails" readonly></input>
+          </div>
+
           <div class="form-group checkbox-group">
             <label for="received">Đã nhận bằng</label>
             <div class="checkbox-wrapper">
