--- a/src/main/resources/templates/listRegistrationPage.html
+++ b/src/main/resources/templates/listRegistrationPage.html
@@ -73,6 +73,7 @@
             <th>ID phiếu đăng ký</th>
             <th>Tên khách hàng</th>
             <th>Ngày đăng ký</th>
+            <th>Lần gia hạn</th>
             <th>Tên thí sinh</th>
             <th>Lịch thi</th>
             <th>Chứng chỉ</th>
