--- a/src/main/resources/templates/detailRegistrationFormPage.html
+++ b/src/main/resources/templates/detailRegistrationFormPage.html
@@ -24,7 +24,9 @@
     <!-- White sub-header bar -->
     <header class="topbar">
       <div class="logo-info">
-        <img src="/images/logo.png" alt="ACCI logo" class="logo" />
+        <a href="/home" class="logo-link">
+          <img src="/images/logo.png" alt="ACCI logo" class="logo" />
+        </a>
       </div>
       <div class="staff-info">
         <a href="#" class="logout"><strong>Đăng xuất</strong></a>
