--- a/src/main/resources/templates/invoice.html
+++ b/src/main/resources/templates/invoice.html
@@ -33,7 +33,9 @@
 <!-- Header -->
 <header class="topbar">
   <div class="logo-info">
-    <img th:src="@{/image/logo.png}" alt="ACCI logo" class="logo"/>
+    <a href="/home" class="logo-link">
+          <img src="/images/logo.png" alt="ACCI logo" class="logo" />
+        </a>
   </div>
   <div class="staff-info">
     <span>Nhân viên tiếp nhận: <strong id="staffName"></strong></span>
