--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -27,7 +27,9 @@
     <!-- Header trắng chứa logo và đăng xuất -->
     <header class="topbar">
       <div class="logo-info">
-        <img src="/images/logo.png" alt="ACCI logo" class="logo" />
+        <a href="/home" class="logo-link">
+          <img src="/images/logo.png" alt="ACCI logo" class="logo" />
+        </a>
       </div>
       <div class="staff-info">
         <a href="#" class="logout"><strong>Đăng xuất</strong></a>
@@ -64,14 +66,14 @@
         <p>
           Với vai trò là Đại diện quốc gia của các tổ chức hàng đầu thế giới như
           Viện Khảo thí Giáo dục Hoa Kỳ (ETS), Tổ chức Khảo thí Tin học
-          CERTIPORT, IIG Việt Nam được ủy quyền tổ chức các kỳ thi quốc tế uy
+          CERTIPORT, ACCI Việt Nam được ủy quyền tổ chức các kỳ thi quốc tế uy
           tín như TOEIC, TOEFL, MOS, IC3, MCE, ACPro, Apple Swift, SAT, SSAT,
-          GRE, CFA... IIG Việt Nam đã khẳng định được uy tín và vị thế hàng đầu
+          GRE, CFA... ACCI Việt Nam đã khẳng định được uy tín và vị thế hàng đầu
           của mình bằng khả năng hỗ trợ toàn diện cho các doanh nghiệp, tổ chức
           giáo dục và cá nhân trong việc tư vấn và cung cấp các giải pháp đào
           tạo ngoại ngữ và Công nghệ thông tin theo tiêu chuẩn quốc tế. Với
           nhiều thành tựu quan trọng đối với sự hình thành, phát triển của lĩnh
-          vực khảo thí và kiểm định chất lượng giáo dục tại Việt Nam, IIG Việt
+          vực khảo thí và kiểm định chất lượng giáo dục tại Việt Nam, ACCI Việt
           Nam được biết đến là tổ chức cung cấp dịch vụ kiểm định chất lượng
           giáo dục uy tín và hàng đầu tại Việt Nam.
         </p>
@@ -83,15 +85,15 @@
       <div class="detail-item">
         <h3>Tầm nhìn</h3>
         <p>
-          IIG Việt Nam định hướng trở thành Tổ chức Giáo dục hàng đầu trong nước
-          và khu vực về khảo thí, giải pháp giáo dục và hệ sinh thái giáo dục
-          số.
+          ACCI Việt Nam định hướng trở thành Tổ chức Giáo dục hàng đầu trong
+          nước và khu vực về khảo thí, giải pháp giáo dục và hệ sinh thái giáo
+          dục số.
         </p>
       </div>
       <div class="detail-item">
         <h3>Sứ mệnh</h3>
         <p>
-          IIG Việt Nam cam kết đưa những tiêu chuẩn và giải pháp giáo dục tiên
+          ACCI Việt Nam cam kết đưa những tiêu chuẩn và giải pháp giáo dục tiên
           tiến nhất, nhằm nâng cao trình độ và kỹ năng của nguồn nhân lực Việt
           và khu vực ngang tầm Thế giới.
         </p>
