--- a/src/main/resources/templates/registerSuccess.html
+++ b/src/main/resources/templates/registerSuccess.html
@@ -62,17 +62,17 @@
 <!--        });-->
 <!--    });-->
 <!--</script>-->
-<script>
-    $.ajax({
-        url: "/api/auth/check",
-        method: "GET",
-        xhrFields: { withCredentials: true },
-        error: function (xhr) {
-            if (xhr.status === 401 || xhr.status === 403) {
-                window.location.href = "/login?redirect=/registrations/individual/form";
-            }
-        }
-    });
-</script>
+<!--<script>-->
+<!--    $.ajax({-->
+<!--        url: "/api/auth/check",-->
+<!--        method: "GET",-->
+<!--        xhrFields: { withCredentials: true },-->
+<!--        error: function (xhr) {-->
+<!--            if (xhr.status === 401 || xhr.status === 403) {-->
+<!--                window.location.href = "/login?redirect=/registrations/individual/form";-->
+<!--            }-->
+<!--        }-->
+<!--    });-->
+<!--</script>-->
 </body>
 </html>
