--- a/src/main/resources/templates/taolichthi.html
+++ b/src/main/resources/templates/taolichthi.html
@@ -154,7 +154,7 @@
             <th>Giờ thi</th>
             <th>Số lượng tối đa</th>
             <th>Số lượng hiện tại</th>
-            <th>Chỉnh sửa</th>
+            <!--<th>Chỉnh sửa</th> -->
           </tr>
         </thead>
         <tbody>
