--- a/src/main/resources/templates/listRegistrationPage.html
+++ b/src/main/resources/templates/listRegistrationPage.html
@@ -11,7 +11,6 @@
     />
     <link rel="stylesheet" href="/css/active.css" />
   </head>
-
   <body>
     <!-- Top blue contact bar -->
     <div class="topbar-blue">
@@ -24,7 +23,6 @@
         <i class="fas fa-clock"></i> <span id="clock">Đang tải...</span>
       </div>
     </div>
-
     <!-- White sub-header bar -->
     <header class="topbar">
       <div class="logo-info">
@@ -36,11 +34,9 @@
         <a href="#" class="logout"><strong>Đăng xuất</strong></a>
       </div>
     </header>
-
     <div class="banner">
       <img src="/images/banner.png" alt="Banner" class="banner-image" />
     </div>
-
     <nav class="navbar">
       <a href="/list-registration-forms" class="active"
         >Danh sách phiếu đăng ký</a
@@ -49,7 +45,6 @@
       <a href="/invoice">Lập hóa đơn</a>
       <a href="/results">Tra cứu kết quả thi</a>
     </nav>
-
     <main class="content">
       <div
         style="
@@ -63,7 +58,6 @@
           >Lập phiếu đăng ký</a
         >
       </div>
-
       <div class="legend">
         <span><span class="dot green"></span>Đã thanh toán</span>
         <span><span class="dot red"></span>Chưa thanh toán</span>
@@ -85,6 +79,19 @@
         <tbody id="registration-body"></tbody>
       </table>
     </main>
+
+    <!-- Popup Modal Structure -->
+    <div id="customerTypeModal" class="modal">
+      <div class="modal-content">
+        <span class="close-button">&times;</span>
+        <h2>Vui lòng chọn loại khách hàng!</h2>
+        <div class="modal-buttons">
+          <button id="individualBtn" class="modal-btn">Cá nhân</button>
+          <button id="organizationBtn" class="modal-btn">Đơn vị</button>
+        </div>
+      </div>
+    </div>
+
     <script src="/js/listRegistration.js"></script>
     <script src="/js/headerAllPage.js"></script>
   </body>
