change ui for register success

--- a/src/main/resources/templates/registerSuccess.html
+++ b/src/main/resources/templates/registerSuccess.html
@@ -32,14 +32,8 @@
               <!--                        Vui lòng kiểm tra email để biết thêm chi tiết về lịch thi.-->
               <!--                    </p>-->
               <div class="d-grid gap-2 d-md-block">
-                <a href="/home" class="btn btn-primary me-2">
-                  <i class="bi bi-house-door-fill"></i> Về trang chủ
-                </a>
-                <a
-                  href="/registrations/individual/form"
-                  class="btn btn-outline-primary"
-                >
-                  <i class="bi bi-plus-circle"></i> Đăng ký thêm
+                <a href="/list-registration-forms" class="btn btn-primary me-2">
+                  <i class="bi bi-house-door-fill"></i> Về trang danh sách phiếu đăng ký
                 </a>
               </div>
             </div>
